tdf#169101 docx export: ensure valid ISO8601 Sdt fullDate

If the fullDate value is not a valid ISO8601 format string
then MS Word complains that the file is invalid.

To fix this, I needed a mechanism similar to
  std::pair<bool, double> DateFieldmark::GetCurrentDate()
that allows GetCurrentDate to know whether it is a valid date, and
  DateFieldmark::GetDateInStandardDateFormat
to get the date in a standard format.

In addition, I fixed a few other overlooked pieces.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf169101_datePicker

This unit test forced me to create the fall-back mechanism:
make CppunitTest_sw_ooxmlexport13 \
    CPPUNIT_TEST_NAME=testInvalidDateFormField

Change-Id: If6ea8022f82d70a10c9af9cede285855122ddf60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199118
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199279
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>