sw/source/writerfilter/dmapper/DomainMapper_Impl.cxx
@@ -1275,7 +1275,8 @@ void DomainMapper_Impl::PopSdt()
     {
         OUString aDateString;
         xContentControl->getPropertyValue(u"DateString"_ustr) >>= aDateString;
-        xCursor->setString(aDateString);
+        if (!aDateString.isEmpty())
+            xCursor->setString(aDateString);
     }
 
     m_pSdtHelper->clear();
